[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/PlayerSelect.gd" type="Script" id=1]
[ext_resource path="res://Art/Background.png" type="Texture" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float offset = 0.0;
uniform bool play = false;

void fragment() {
	COLOR = texture(TEXTURE, UV - vec2(fract(TIME * 0.1), 0.0));
	if (play) {
		COLOR = texture(TEXTURE, UV + vec2(fract(TIME * 0.1), 0.0));
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/offset = 0.0
shader_param/play = false

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:start_bg")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="PlayerSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 1192, 328 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )
next/Intro = "background"

[node name="Previous" type="TextureButton" parent="."]
anchor_left = 0.2
anchor_top = 0.47
anchor_right = 0.35
anchor_bottom = 0.52
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Previous"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Previous/CenterContainer"]
margin_left = 49.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 22.0
text = "Previous"

[node name="Next" type="TextureButton" parent="."]
anchor_left = 0.65
anchor_top = 0.47
anchor_right = 0.8
anchor_bottom = 0.52
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Next"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Next/CenterContainer"]
margin_left = 61.0
margin_top = 8.0
margin_right = 91.0
margin_bottom = 22.0
text = "Next"

[node name="Continue" type="TextureButton" parent="."]
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Continue"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Continue/CenterContainer"]
margin_left = 48.0
margin_top = 8.0
margin_right = 105.0
margin_bottom = 22.0
text = "Continue"

[connection signal="pressed" from="Previous" to="." method="_prev_character_pressed"]
[connection signal="pressed" from="Next" to="." method="_next_character_pressed"]
[connection signal="pressed" from="Continue" to="." method="_continue_pressed"]
